{
    "name": "NonMovementControls",
    "maps": [
        {
            "name": "NotMovementActions",
            "id": "17c05d34-be15-4bad-8109-a86a148e190a",
            "actions": [
                {
                    "name": "EnableBuildingMode",
                    "type": "Button",
                    "id": "d66bee28-a4c3-4e16-b55a-535a8c0de479",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Switch",
                    "type": "PassThrough",
                    "id": "c0bc0caf-615d-458b-9ea7-e05a0902136a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaceObject",
                    "type": "Button",
                    "id": "acb8acde-66c7-47e4-a60e-d1d2ca275738",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dfafcd1c-fcc6-4b3e-ad23-6041d6ade650",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnableBuildingMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b81557ea-96c8-427a-991a-e8946872f897",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnableBuildingMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21ebc578-6236-4295-9943-66543c7f3bef",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e50c869d-e60a-44dc-a97b-b78fa9e7b59d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}